# signature-time-series-forecasting

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: data_dictionary.csv  forecast_results_delta1.csv  forecast_results_delta2.csv  forecast_results_delta4.csv  forecast_results_delta6.csv  signature_mre_by_horizon.csv  table_a3_full_comparison.csv  train_data.csv  validation_data.csv
data/processed/consumer_loans_uncertainty/: consumer_loans_uncertainty_summary.csv
data/processed/consumer_loans_uncertainty/dataset/: data_dictionary.csv  full_dataset.csv
data/processed/consumer_loans_uncertainty/point_joint_path/: forecast_results_delta1.csv  forecast_results_delta12.csv  forecast_results_delta2.csv  forecast_results_delta3.csv  forecast_results_delta4.csv  forecast_results_delta6.csv  forecast_results_delta8.csv  signature_mre_by_horizon.csv
data/processed/initial_claims_public/: comparison_initial_claims.csv  forecast_path_comparison_delta4.csv  train_data.csv
data/processed/initial_claims_public_uncertainty/: initial_claims_uncertainty_summary.csv
notebooks/: 01_reproduce_gu_signature_forecast.ipynb  02_initial_claims_public_data_experiment.ipynb  03_uncertainty_forecasting_consumer_loans.ipynb  04_uncertainty_forecasting_initial_claims.ipynb
src/marketplace_signature_forecast/: __init__.py  adaptive_weights.py  baselines.py  config.py  data_loading.py  dataset_specs.py  evaluation.py  modeling.py  plotting.py  preprocessing.py  quantile_evaluation.py  quantile_modeling.py  signature.py
(+54 files in other folders)
