[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marketplace-signature-forecast"
version = "0.1.0"
description = "Notebook-first reproduction of Gu et al. using modular Python components."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
